# pyguru

./: README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: pytest.yml
pyguru/: __init__.py  base_labguru_endpoint.py  pyguru.py
pyguru/adapter/: __init__.py  labguru_adapter.py  rest_adapter.py
pyguru/credentials/: __init__.py  credentials.py  credentials_data.py  credentials_file.py  credentials_file_parser.py
pyguru/endpoints/: __init__.py  antibodies.py  attachments.py  auth.py  bacteria.py  base_labguru_endpoint.py  biocollections.py  boxes.py  cell_lines.py  comments.py  companies.py  compounds.py  datasets.py  documents.py  elements.py  experiments.py  flies.py  folders.py  fungi.py  genes.py  instruments.py  lipids.py  maintenance_events.py  maintenance_templates.py  maintenance_types.py  members.py  plants.py  projects.py  proteins.py  protocols.py  reports.py  sections.py  sequences.py  sessions.py  shopping_list.py  sops.py  stocks.py  storages.py  tags.py  teams.py  (+8 more)
pyguru/enums/: __init__.py  box_type.py  clonality.py  color.py  currency.py  element_type.py  sequence_type.py  storage_type_id.py
pyguru/models/: __init__.py  antibody.py  bacterium.py  box.py  cell_line.py  comment.py  company.py  compound.py  dataset.py  document.py  experiment.py  fly.py  folder.py  fungus.py  gene.py  lipid.py  plant.py  project.py  protein.py  protocol.py  report.py  sequence.py  shopping_list.py  sop.py  stock.py  storage.py  tag.py  tissue.py  unit.py  vector.py  virus.py  visualization.py  webhook.py  worm.py  yeast.py
pyguru/plugins/: elements.py
(+6 files in other folders)
