[project]
name = "pyguru"
version = "0.0.1"
authors = [
  { name="Ron Mordoch", email="mordoch.ron@gmail.com" },
]
description = "Python API wrapper for the Labguru REST API "
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/RonMordoch/pyguru"
Issues = "https://github.com/RonMordoch/pyguru/issues"


[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
