[project]
name = "pyguru"
authors = [{ name = "Ron Mordoch", email = "mordoch.ron@gmail.com" }]
description = "Python API wrapper for the Labguru REST API "
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dynamic = ["version", "dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
version = { attr = "pyguru.__version__" }
dependencies = { file = ["requirements.txt"] }
optional-dependencies.dev = { file = ["requirements-dev.txt"] }

[project.urls]
Homepage = "https://github.com/RonMordoch/pyguru"
Issues = "https://github.com/RonMordoch/pyguru/issues"


[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
